// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CF Writer App - Application Frontend Generate deployment configs - Add 2nd HTML5 app to app frontend router 1`] = `
"_schema-version: '3.1'
ID: rootmta
description: Fiori elements app
version: 0.0.1
modules:
  - name: rootmta-app-content
    type: com.sap.application.content
    path: .
    requires:
      - name: rootmta-app-front
        parameters:
          content-target: true
      - name: rootmta-uaa
    build-parameters:
      build-result: resources
      requires:
        - name: comfioritoolslrop
          artifacts:
            - comfioritoolslrop.zip
          target-path: resources/
        - name: basicapp
          artifacts:
            - basicapp.zip
          target-path: resources/
    parameters:
      config:
        destinations:
          - name: ui5
            url: 'https://ui5.sap.com'
  - name: comfioritoolslrop
    type: html5
    path: lrop
    build-parameters:
      builder: custom
      build-result: dist
      commands:
        - npm install
        - 'npm run build:cf'
      supported-platforms: []
  - name: basicapp
    type: html5
    path: basicapp
    build-parameters:
      builder: custom
      build-result: dist
      commands:
        - npm install
        - 'npm run build:cf'
      supported-platforms: []
resources:
  - name: rootmta-uaa
    type: org.cloudfoundry.managed-service
    parameters:
      path: ./xs-security.json
      service: xsuaa
      service-name: rootmta-xsuaa-service
      service-plan: application
  - name: rootmta-app-front
    type: org.cloudfoundry.managed-service
    parameters:
      service: app-front
      service-name: rootmta-app-front-service
      service-plan: developer
parameters:
  deploy_mode: html5-repo
  enable-parallel-deployments: true
"
`;

exports[`CF Writer App - Application Frontend Generate deployment configs - Add 2nd HTML5 app to app frontend router 2`] = `
"{
  \\"welcomeFile\\": \\"/index.html\\",
  \\"authenticationMethod\\": \\"route\\",
  \\"routes\\": [
    {
      \\"source\\": \\"^/sap/(.*)$\\",
      \\"target\\": \\"/sap/$1\\",
      \\"destination\\": \\"TestDestination\\",
      \\"authenticationType\\": \\"xsuaa\\",
      \\"csrfProtection\\": false
    },
    {
      \\"source\\": \\"^/resources/(.*)$\\",
      \\"target\\": \\"/resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    },
    {
      \\"source\\": \\"^/test-resources/(.*)$\\",
      \\"target\\": \\"/test-resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    },
    {
      \\"source\\": \\"^/logout-page.html$\\",
      \\"service\\": \\"app-front\\",
      \\"authenticationType\\": \\"none\\"
    },
    {
      \\"source\\": \\"^/index.html$\\",
      \\"service\\": \\"app-front\\",
      \\"cacheControl\\": \\"no-cache, no-store, must-revalidate\\"
    },
    {
      \\"source\\": \\"^(.*)$\\",
      \\"target\\": \\"$1\\",
      \\"service\\": \\"app-front\\",
      \\"authenticationType\\": \\"ias\\"
    }
  ]
}
"
`;

exports[`CF Writer App - Application Frontend Generate deployment configs - Add 2nd HTML5 app to app frontend router 3`] = `
"{
  \\"xsappname\\": \\"rootmta\\",
  \\"tenant-mode\\": \\"dedicated\\",
  \\"description\\": \\"Security profile of called application\\",
  \\"scopes\\": [],
  \\"role-templates\\": []
}
"
`;

exports[`CF Writer App - Application Frontend Generate deployment configs - HTML5 App with app frontend approuter attached with no destination available 1`] = `
"_schema-version: '3.2'
ID: comfioritoolslrop
description: Generated by Fiori Tools
version: 0.0.1
parameters:
  enable-parallel-deployments: true
  deploy_mode: html5-repo
modules:
  - name: comfioritoolslrop-app-content
    type: com.sap.application.content
    path: .
    requires:
      - name: comfioritoolslrop-app-front
        parameters:
          content-target: true
      - name: comfioritoolslrop-uaa
    build-parameters:
      build-result: resources
      requires:
        - name: comfioritoolslrop
          artifacts:
            - comfioritoolslrop.zip
          target-path: resources/
    parameters:
      config:
        destinations:
          - name: ui5
            url: 'https://ui5.sap.com'
  - name: comfioritoolslrop
    type: html5
    path: .
    build-parameters:
      builder: custom
      build-result: dist
      commands:
        - npm install
        - 'npm run build:cf'
      supported-platforms: []
resources:
  - name: comfioritoolslrop-uaa
    type: org.cloudfoundry.managed-service
    parameters:
      path: ./xs-security.json
      service: xsuaa
      service-name: comfioritoolslrop-xsuaa-service
      service-plan: application
  - name: comfioritoolslrop-app-front
    type: org.cloudfoundry.managed-service
    parameters:
      service: app-front
      service-name: comfioritoolslrop-app-front-service
      service-plan: developer
"
`;

exports[`CF Writer App - Application Frontend Generate deployment configs - HTML5 App with app frontend approuter attached with no destination available 2`] = `
"{
  \\"welcomeFile\\": \\"/index.html\\",
  \\"authenticationMethod\\": \\"route\\",
  \\"routes\\": [
    {
      \\"source\\": \\"^/resources/(.*)$\\",
      \\"target\\": \\"/resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    },
    {
      \\"source\\": \\"^/test-resources/(.*)$\\",
      \\"target\\": \\"/test-resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    },
    {
      \\"source\\": \\"^(.*)$\\",
      \\"target\\": \\"$1\\",
      \\"service\\": \\"app-front\\",
      \\"authenticationType\\": \\"ias\\"
    }
  ]
}
"
`;

exports[`CF Writer App - Application Frontend Generate deployment configs - HTML5 App with app frontend approuter attached with no destination available 3`] = `
"{
  \\"xsappname\\": \\"comfioritoolslrop\\",
  \\"tenant-mode\\": \\"dedicated\\",
  \\"description\\": \\"Security profile of called application\\",
  \\"scopes\\": [],
  \\"role-templates\\": []
}
"
`;
